--- a/main.html
+++ b/main.html
@@ -1,8 +1,21 @@
 <DOCTYPE html>
 <html lang=es>
 	<head>
+		<meta charset="UTF-8"/>
+		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	</head>
 	<body>
-		<p>Hola mundo</p>
+		<header>
+			<h1>Blog CMS</h1>
+		</header>
+		<section id="main">
+			<p>Hola mundo</p>	
+		</section>
+		<footer>
+			<p>@Juan_Sicilia</p>
+		</footer>
+		<script type="text/javascript" src="./js/vendor/angular.js"></script>
+		<script type="text/javascript" src="./js/main.js"></script>
 	</body>
 </html>
