--- a/main.html
+++ b/main.html
@@ -1,20 +1,14 @@
 <DOCTYPE html>
-<html lang=es>
+<html lang='es' ng-app='blog'>
 	<head>
 		<meta charset="UTF-8"/>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
 	</head>
 	<body>
-		<header>
-			<h1>Blog CMS</h1>
-		</header>
-		<section id="main">
-			<p>Hola mundo</p>	
-		</section>
-		<footer>
-			<p>@Juan_Sicilia</p>
-		</footer>
+		<header-directive></header-directive>
+		<main-section></main-section>
+		<footer-directive></footer-directive>
 		<script type="text/javascript" src="./js/vendor/angular.js"></script>
 		<script type="text/javascript" src="./js/main.js"></script>
 	</body>
