Adding controllers and sercives files. In addition there is a new script.file where I wanna put all sql scripts i'll need

--- a/main.html
+++ b/main.html
@@ -11,5 +11,6 @@
 		<footer-directive></footer-directive>
 		<script type="text/javascript" src="./js/vendor/angular.js"></script>
 		<script type="text/javascript" src="./js/main.js"></script>
+		<script type="text/javascript" src="./js/controllers/create-post-controller.js"></script>
 	</body>
 </html>
