--- a/main.html
+++ b/main.html
@@ -12,5 +12,8 @@
 		<script type="text/javascript" src="./js/vendor/angular.js"></script>
 		<script type="text/javascript" src="./js/main.js"></script>
 		<script type="text/javascript" src="./js/controllers/create-post-controller.js"></script>
+		<script type="text/javascript" src="./js/controllers/show-posts-controller.js"></script>
+		<script type="text/javascript" src="./js/services/show-posts-service.js"></script>
+		<script type="text/javascript" src="./js/directives/main-directives.js"></script>
 	</body>
 </html>
